[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0"
]

[project]
name = "llamacloud-mcp"
version = "2.0.0"
description = "Expose LlamaCloud services as MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "llama-cloud>=1.0,<2.0",
  "llama-index-core>=0.12.0",
  "mcp[cli]>=1.6.0",
  "python-dotenv>=1.1.0",
  "click"
]
license = "MIT"
authors = [
  {name = "Tuana Celik", email = "tuana@runllama.ai"},
  {name = "Laurie Voss", email = "laurie@runllama.ai"},
  {name = "Logan Markewich", email = "logan@runllama.ai"}
]
keywords = [
  "mcp",
  "llama",
  "llamacloud",
  "llama-cloud"
]

[project.scripts]
llamacloud-mcp = "llamacloud_mcp.main:main"

[tool.hatch.build.targets.sdist]
include = ["llamacloud_mcp/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llamacloud_mcp/"]
exclude = ["**/BUILD"]
